--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
@@ -8,8 +8,8 @@
 <h2>Index of all alerts AASPOT</h2>
 @if (ViewBag.LocationFilter != null)
 {
-<h3>Filtered on location: @ViewBag.LocationFilter</h3>
-<h4>This location has @ViewBag.AlertCount alerts in his history</h4>
+    <h3>Filtered on location: @ViewBag.LocationFilter</h3>
+    <h4>This location has @ViewBag.AlertCount alerts in his history</h4>
 }
 
 @Html.Grid(Model).Named("h_alert").Build(columns =>
@@ -20,30 +20,30 @@
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser").Css("hidden-sm hidden-xs");
     columns.Add(c => c.triggerCount).Titled("TC").Filterable(true).Css("hidden-sm hidden-xs");
-    //render dropdown to set alert status
-    columns.Add(c => c.c_state.state)
+//render dropdown to set alert status
+columns.Add(c => c.c_state.state)
            .Titled("State")
            .Encoded(false)
            .Filterable(true)
            .RenderedAs(c => MyFilters.ChangeAlertStatus(c.id, c.c_state.state));
 
-    //launch sbcu tool
-    columns.Add(c => c)
+//launch sbcu tool
+columns.Add(c => c)
                   .Encoded(false)
                   .Filterable(false)
                   .Sortable(false)
                   //gefoefel om de tool id er uit te halen! Dit kan falen als er geen 'gun:' in de omschrijving zit dus is ROMMEL code
                   .RenderedAs(c => MyEquiToolkit.SbcuTool(c.location, c.info.Substring(c.info.IndexOf("gun:"), 5).Replace("gun:", "")));
 
-    //add filterbutton
-    columns.Add(c => c)
+//add filterbutton
+columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
-                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("AASPOTAlertList", new { LocationFilter = c.location }), "glyphicon glyphicon-filter", "","Filter alerts for this location")
+                .RenderedAs(c => MyFilters.IconActionLink(Url.Action("AASPOTAlertList", new { LocationFilter = c.location }), "glyphicon glyphicon-filter", "", "Filter alerts for this location")
                 ).Filterable(false);
 
-    //add edit button
-    columns.Add(c => c)
+//add edit button
+columns.Add(c => c)
                 .Titled("")
                 .Encoded(false)
                 .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "glyphicon glyphicon-pencil", "", "Edit this alert")
@@ -51,37 +51,38 @@
 
 }).Filterable(true).Sortable(true).Pageable(pager =>
 {
-    pager.RowsPerPage = 15;
+    pager.RowsPerPage = 17;
 }).Empty("Did not find anything").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleStatus(row.c_state.state))
 
-<p></p>
-@*info model in page for alert details *@
-<div class="container">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div id="alertDetailsPartial">Click on a row for more details about the alert</div>
-        </div>
-    </div>
-</div>
 
-    @section scripts{
-
-        <script type="text/javascript">
-            //full with screen
-            $("#allcontent").removeClass("body-content");
-            $("#allcontent").removeClass("container");
+@section scripts{
+    <script>
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
 
         //subscribe to row clicked events
         $('.mvc-grid').mvcgrid({
             rowClicked: function (row, data, e) {
-                console.log(data);
-                $(row).addClass('active').siblings().removeClass('active');
-                $("#alertDetailsPartial").html("Loading.....");
+                //if row already has this clase close the modal
+                if ($(row).hasClass("info")) {
+                    $("#placeholder").remove();
+                    $(row).removeClass("info");
+                    return;
+                }
+                //clear selected rows for this table
+                $('tr').removeClass('info'); //THIS IS WRONG
+                $(row).addClass("info");
+                $("#placeholder").remove(); //clear placeholder is exists
+                //add new placeholder afhter selected row
+                $(row).after('<tr id="placeholder"><td colspan="10000"><div class="modal-content"><div class="modal-body" id ="placeholderPartial"></div></div></td></tr>');
+                //animation
+                $("#placeholderPartial").html("Loading.....");
+                //load url in placeholder
                 var url = "@Url.Action("_Details")?id=" + data.id;
-                $("#alertDetailsPartial").load(url);
+                $("#placeholderPartial").load(url);
             }
         });
-        </script>
-
-    }
+    </script>
+}
 
