moved maximo asset update to website

--- a/EqUiWebUi/Views/Chart2/Index.cshtml
+++ b/EqUiWebUi/Views/Chart2/Index.cshtml
@@ -44,32 +44,32 @@
                     datasets: [
                         {
                             label: "My First dataset",
-                            yAxisID: 'A',
-                            position: 'left',
-                            backgroundColor: '#2F7CCA',
-                            borderColor: '#2F7CCA',
-                            fill: false,
-                            data: aDatasets1
-                        },
-                        {
-                            type: 'line',
-                            label: "My Second dataset",
-                            yAxisID: 'B',
-                            position: 'left',
-                            backgroundColor: '#2F7CCA',
-                            borderColor: '#2F7CCA',
-                            fill: false,
-                            data: aDatasets2
-                        },
-                        {
-                            type: 'line',
-                            label: "My 3td dataset",
                             yAxisID: 'B',
                             position: 'left',
                             backgroundColor: '#2F7CCA',
                             borderColor: '#2F7CCA',
                             fill: false,
                             data: aDatasets3
+                        },
+                        {
+                            type: 'bar',
+                            label: "My Second dataset",
+                            yAxisID: 'B',
+                            position: 'left',
+                            backgroundColor: '#d851ff',
+                            borderColor: '#d851ff',
+                            fill: false,
+                            data: aDatasets2
+                        },
+                        {
+                            type: 'line',
+                            label: "My 3td dataset",
+                            yAxisID: 'A',
+                            position: 'left',
+                            backgroundColor: '#f2af13',
+                            borderColor: '#f2af13',
+                            fill: false,
+                            data: aDatasets1
                         }]
 
                 },
