--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -15,6 +15,7 @@
 @Html.Grid(Model).Named("c_triggers").Build(columns =>
 {
     columns.Add(c => c.id).Titled("ID").InitialSort(GridSortOrder.Asc).Css("hidden-sm hidden-xs");
+    columns.Add(c => c.alertType).Titled("alertType");
     columns.Add(c => c.enabled).Titled("enabled");
     columns.Add(c => c.discription).Titled("discription");
     columns.Add(c => c.enableSMS).Titled("enableSMS");
