--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Delete.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Delete.cshtml
@@ -8,6 +8,7 @@
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this trigger?</h3>
+<h3 class="alert alert-danger" >This will also DELETE all alerts made by this trigger!!</h3>
 <div>
     <hr />
     <dl class="dl-horizontal">
@@ -17,6 +18,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.id)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.alertType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.alertType)
         </dd>
 
         <dt>
