--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -25,6 +25,7 @@
                 .Titled("")
                 .Encoded(false)
                 .RenderedAs(c => @Html.ActionLink("Edit", "Edit", new { id = c.id }) + " | " +
+                                 @Html.ActionLink("Show", "Index","h_alert", new { c_trigger_id = c.id },null) + " | " +
                                  @Html.ActionLink("Delete", "Delete", new { id = c.id })
                 ).InitialSort(GridSortOrder.Asc).Filterable(false);
 }).Filterable(true).Sortable(true).Empty("Did not find anything").Css("table-hover")
