--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
@@ -5,9 +5,9 @@
 {
     columns.Add(c => c.Robot).Titled("Robot").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.pWear).Titled("%wear");
-    columns.Add(c => c.nRspots).Titled("Resterende Spots").Css("hidden");  //hide until trusted
-    columns.Add(c => c.nRcars).Titled("Resterende Stukken").Css("hidden");  //hide until trusted
-    columns.Add(c => c.nDress).Titled("Aantal dresses");
+    columns.Add(c => c.nRspots).Titled("#R Spots").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.nRcars).Titled("#R Stukken").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.nDress).Titled("#gefreest");
 }).Empty("Did not find anything").Css("table-hover")
 
 @*subscrible this table to events*@
