--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsToChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsToChange.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<EqUiWebUi.Areas.Tiplife.Models.TipMonitor>
 
 @Html.Grid(Model).Named("TipsToChangeTable").Build(columns =>
-                    {
-                        columns.Add(c => c.Robot).Titled("Robot").InitialSort(GridSortOrder.Asc);
-                        columns.Add(c => c.pWear).Titled("%wear");
-                        columns.Add(c => c.nRspots).Titled("Resterende Spots").Css("hidden");  //hide until trusted
-                        columns.Add(c => c.nRcars).Titled("Resterende Stukken").Css("hidden");  //hide until trusted
-                        columns.Add(c => c.nDress).Titled("Aantal dresses");
-                    }).Empty("Did not find anything").Css("table-hover")
+{
+    columns.Add(c => c.Robot).Titled("Robot").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c.pWear).Titled("%wear");
+    columns.Add(c => c.nRspots).Titled("#R Spots").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.nRcars).Titled("#R Stukken").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.nDress).Titled("#gefreest");
+}).Empty("Did not find anything").Css("table-hover")
 
 @*subscrible this table to events*@
 <script>
