debug van tiplife tool

--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -28,7 +28,7 @@
                 Tiplife alerts (no changed deteced)
             </p>
             <p>
-                <a href="~/Tiplife/NgacElectrode/TipDressData" class="btn btn-primary btn-sm">TipDressData &raquo;</a>
+                <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-controller_name-Contains=xxx&DataGrid-Rows=20" class="btn btn-primary btn-sm">TipDressData &raquo;</a>
                 Ruwe Tipdress data
             </p>
 
