--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/PlanTipChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/PlanTipChange.cshtml
@@ -14,7 +14,7 @@
             <div class="alert alert-danger">
                 <h3>OPGEPAST!</h3>
                 <diV>Deze tool mag enkel gebruikt worden in het BEGIN! van de ploeg.</diV>
-                <div>We kijken vanaf nu niet langer enkel naar de wear. Maar naar het aantal stukken dat nog kunnen gebouwd worden.</div> 
+                <div>We kijken vanaf nu niet langer enkel naar de (%wear). Maar naar het aantal stukken (#R Stukken) dat nog kunnen gebouwd worden.</div>
 
             </div>
 
@@ -60,7 +60,7 @@
 
                     <div class="row">
                         <div class="col-sm-5">
-                            <label class="control-label col-sm-8" for="maxdress">aantal keer gefreest groter dan</label>
+                            <label class="control-label col-sm-8" for="maxdress">aantal keer gefreesd groter dan</label>
                             <div class="col-sm-4">
                                 <input class="form-control input-sm" type="number" min="0" max="200" step="10" value="120" id="maxdress" />
                             </div>
