--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -21,7 +21,8 @@
                columns.Add(c => c.C_FixedWearBeforeChange).Titled("%Fixed");
                columns.Add(c => c.C_MoveWearBeforeChange).Titled("%Move");
                columns.Add(c => c.TipAge_h_).Titled("(h)leeftijd");
-               columns.Add(c => c.DeltaNomBeforeChange).Titled("DNbc").Css("hidden-sm hidden-xs");
+               columns.Add(c => c.ESTnSpotsFixedWearBefore100).Titled("ESTnSFix100").Css("hidden-sm hidden-xs");
+               columns.Add(c => c.ESTnSpotsMoveWearBefore100).Titled("ESTnSMov100").Css("hidden-sm hidden-xs");
 
                columns.Add()
                  .Encoded(false)
