--- a/EqUiWebUi/Areas/VASC/Views/c_controller/Edit.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/Edit.cshtml
@@ -36,6 +36,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.systemId, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.systemId)
             @Html.DisplayFor(model => model.systemId, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.systemId, "", new { @class = "text-danger" })
         </div>
@@ -68,6 +69,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.LocationTree, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.LocationTree)
             @Html.DisplayFor(model => model.LocationTree, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LocationTree, "", new { @class = "text-danger" })
         </div>
@@ -76,6 +78,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Assetnum, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.Assetnum)
             @Html.DisplayFor(model => model.Assetnum, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Assetnum, "", new { @class = "text-danger" })
         </div>
@@ -84,6 +87,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ProductionTeam, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.ProductionTeam)
             @Html.DisplayFor(model => model.ProductionTeam, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ProductionTeam, "", new { @class = "text-danger" })
         </div>
@@ -92,6 +96,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ResponsiblePloeg, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.ResponsiblePloeg)
             @Html.DisplayFor(model => model.ResponsiblePloeg, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ResponsiblePloeg, "", new { @class = "text-danger" })
         </div>
@@ -100,6 +105,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.ClassificationTree, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.ClassificationTree)
             @Html.DisplayFor(model => model.ClassificationTree, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.ClassificationTree, "", new { @class = "text-danger" })
         </div>
@@ -108,6 +114,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.CLassificationId, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
+            @Html.HiddenFor(model => model.CLassificationId)
             @Html.DisplayFor(model => model.CLassificationId, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.CLassificationId, "", new { @class = "text-danger" })
         </div>
@@ -116,7 +123,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.hasRackidAsBodynum, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DisplayFor(model => model.hasRackidAsBodynum, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.CheckBoxFor(model => model.hasRackidAsBodynum, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.hasRackidAsBodynum, "", new { @class = "text-danger" })
         </div>
     </div>
