--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
         </p>
 
         <p>
-            <a href="http://gensvw2107/cmactapp" class="btn btn-primary btn-sm">cmaCTapp &raquo;</a>
+            <a href="http://gensvw2107.gen.volvocars.net/Greenfield/#/ctgreenfield" class="btn btn-primary btn-sm">cmaCTapp &raquo;</a>
             Tool van IE om Cycle times te bekijken.
         </p>
 
