--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/Index.cshtml
@@ -31,6 +31,10 @@
                 <a href="~/Tiplife/NgacElectrode/TipDressData?DataGrid-controller_name-Contains=xxx&DataGrid-Rows=20" class="btn btn-primary btn-sm">TipDressData &raquo;</a>
                 Ruwe Tipdress data
             </p>
+            <p>
+                <a href="~/Tiplife/NgacElectrode/TipLifeExpectations" class="btn btn-primary btn-sm">TipLifeExpectations &raquo;</a>
+                Tabel met voorspelling hoeveel stukken kunnen gemaakt worden met een electrode
+            </p>
 
             <p>
                 <a href="~/Tiplife/NgacElectrode/PlanTipChange" class="btn btn-primary btn-sm">Plan tipchange &raquo;</a>
