--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipStatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipStatus.cshtml
@@ -7,21 +7,28 @@
     columns.Add(c => c.nDress).Titled("#gefreest");
     columns.Add(c => c.WearRatio).Titled("%WearRatio").Css("hidden-sm hidden-xs");
     columns.Add(c => c.pWear).Titled("%wear").Filterable(true);
-    columns.Add(c => c.nRspots).Titled("#R Spots").Css("hidden-sm hidden-xs");  
-    columns.Add(c => c.nRcars).Titled("#R Stukken").Css("hidden-sm hidden-xs"); 
+    columns.Add(c => c.nRspots).Titled("#R Spots").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.nRcars).Titled("#R Stukken").Css("hidden-sm hidden-xs");
     columns.Add(c => c.TipAge_h_).Titled("leeftijd (h)");
-   // columns.Add(c => c.MagicFiXedWear).Titled("MFW").Css("hidden-sm hidden-xs");
-   // columns.Add(c => c.NoChangeDetected).Titled("NCD").Css("hidden-sm hidden-xs");
-    columns.Add(c => c.Time_DressCycleTime).Titled("ct (s)").Css("hidden-sm hidden-xs");
+//columns.Add(c => c.NoChangeDetected).Titled("NCD").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.RobotWear).Titled("Wear(mm)").Css("hidden-sm hidden-xs");
+    columns.Add(c => c.Time_DressCycleTime).Titled("Ct (s)").Css("hidden-sm hidden-xs");
     columns.Add(c => c.LocationTree).Filterable(true).Css("hidden"); //used for filtering
-                                                                     //launch sbcu tool
-    columns.Add()
+                                                                     //RenderStatusIcon
+columns.Add()
+                         .Titled("Tip")
+                         .Encoded(false)
+                         .Filterable(false)
+                         .Sortable(false)
+                         .RenderedAs(c => MyFilters.TipMonitorIcon(c.NoChangeDetected, c.RobotWear));
+//launch sbcu tool
+columns.Add()
                          .Encoded(false)
                          .Filterable(false)
                          .Sortable(false)
                          .RenderedAs(c => MyEquiToolkit.SbcuTool(c.Robot, "1")); //need to add the toolnumber in die model
 }).Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 20;
-}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleByWearValue(row.pWear,row.nDress,row.nRcars))
+pager.RowsPerPage = 20;
+}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleByWearValue(row.pWear, row.nDress, row.nRcars, row.NoChangeDetected))
 
