--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_TipsChanged.cshtml
@@ -3,10 +3,9 @@
 
 @Html.Grid(Model).Named("TipsChangedTable").Build(columns =>
 {
-    columns.Add(c => c.Robot).Titled("Robot").InitialSort(GridSortOrder.Asc);
+    columns.Add(c => c.Robot).Titled("Robot");
+    columns.Add(c => c.nRcars).Titled("#R Stukken");
     columns.Add(c => c.pWear).Titled("%wear");
-    columns.Add(c => c.nRspots).Titled("#R Spots").Css("hidden-sm hidden-xs");
-    columns.Add(c => c.nRcars).Titled("#R Stukken").Css("hidden-sm hidden-xs");
     columns.Add(c => c.nDress).Titled("#gefreest");
 }).Empty("Did not find anything").Css("table-hover")
 
