--- a/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
@@ -24,7 +24,7 @@
 
     <div class="panel-body">
         <p><a href="~/Alert/L_controlLimits/Index" class="btn btn-primary btn-sm">controlLimits &raquo;</a>view control limits</p>
-
+        <p><a href="~/Alert/L_variants/Index" class="btn btn-primary btn-sm">variants &raquo;</a>view variants</p>
     </div>
 
 </div>
